reformat the code, and change nameGenerator